Update Supplier Target Match, add grid , update query
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42758

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/SupplierTargetMatch/Templates/SupplierTargetMatchGrid.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/SupplierTargetMatch/Templates/SupplierTargetMatchGrid.html
@@ -1,6 +1,6 @@
 ﻿
 <vr-datagrid datasource="scopeModel.targetMatches"
-             pagingtype="'PagingOnScroll'"
+             pagingtype="'Pager'"
              on-ready="scopeModel.onGridReady"
              dataretrievalfunction="scopeModel.dataRetrievalFunction">
     <vr-datagridcolumn headertext="'Zone'" field="'Entity.SaleZone'"></vr-datagridcolumn>
