--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/SupplierTargetMatch/Templates/SupplierTargetMatchFilterTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/SupplierTargetMatch/Templates/SupplierTargetMatchFilterTemplate.html
@@ -1,5 +1,4 @@
-﻿
-<vr-tabs>
+﻿<vr-tabs>
     <vr-tab header="'Filter'">
         <vr-row>
             <vr-whs-be-sellingnumberplan-selector normal-col-num="2"
@@ -42,8 +41,19 @@
     </vr-tab>
     <vr-tab header="'Target Settings'">
         <vr-row>
-            <vr-columns width="1/2row">
-                <vr-whs-sales-suppliertargetmatchmethods-selective on-ready="scopeModel.onCalculationMethodDirectiveReady"></vr-whs-sales-suppliertargetmatchmethods-selective>
+            <vr-whs-sales-suppliertargetmatchmethods-selective on-ready="scopeModel.onCalculationMethodDirectiveReady"></vr-whs-sales-suppliertargetmatchmethods-selective>
+            <vr-columns colnum="2">
+                <vr-select on-ready="scopeModel.onMarginTypeSelectorReady"
+                           datasource="scopeModel.marginTypes"
+                           selectedvalues="scopeModel.selectedMarginType"
+                           datavaluefield="value"
+                           datatextfield="description"
+                           label="Margin Type"
+                           hideremoveicon>
+                </vr-select>
+            </vr-columns>
+            <vr-columns colnum="2">
+                <vr-textbox label="Margin" type="number" value="scopeModel.margin" isrequired></vr-textbox>
             </vr-columns>
         </vr-row>
     </vr-tab>
