--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/SupplierTargetMatch/Templates/SupplierTargetMatchMethodsSelectiveTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/SupplierTargetMatch/Templates/SupplierTargetMatchMethodsSelectiveTemplate.html
@@ -1,22 +1,19 @@
-﻿<vr-row>
-    <vr-columns width="1/2row">
-        <vr-select on-ready="selectiveCtrl.onMethodsSelectorReady"
-                   label="Target Match Method"
-                   entityname="Target Match Method"
-                   datasource="selectiveCtrl.methods"
-                   selectedvalues="selectiveCtrl.selectedMethod"
-                   datavaluefield="ExtensionConfigurationId"
-                   datatextfield="Title"
-                   onselectionchanged="selectiveCtrl.onselectionchanged"
-                   hideremoveicon
-                   isrequired>
-        </vr-select>
-    </vr-columns>
-</vr-row>
-<vr-row>
-    <vr-columns width="fullrow" vr-loader="selectiveCtrl.isLoadingDirective" haschildcolumns>
-        <vr-directivewrapper ng-if="selectiveCtrl.selectedMethod != undefined" directive="selectiveCtrl.selectedMethod.Editor"
-                             on-ready="selectiveCtrl.onDirectiveReady">
-        </vr-directivewrapper>
-    </vr-columns>
-</vr-row>
+﻿<vr-columns width="normal">
+    <vr-select on-ready="selectiveCtrl.onMethodsSelectorReady"
+               label="Target Match Method"
+               entityname="Target Match Method"
+               datasource="selectiveCtrl.methods"
+               selectedvalues="selectiveCtrl.selectedMethod"
+               datavaluefield="ExtensionConfigurationId"
+               datatextfield="Title"
+               onselectionchanged="selectiveCtrl.onselectionchanged"
+               hideremoveicon
+               isrequired>
+    </vr-select>
+</vr-columns>
+<vr-columns width="fullrow" vr-loader="selectiveCtrl.isLoadingDirective" haschildcolumns>
+    <vr-directivewrapper ng-if="selectiveCtrl.selectedMethod != undefined" directive="selectiveCtrl.selectedMethod.Editor"
+                         on-ready="selectiveCtrl.onDirectiveReady">
+    </vr-directivewrapper>
+</vr-columns>
+
