--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
@@ -104,7 +104,7 @@
                                                               isrequired="false">
                         </vr-whs-be-salepricelisttype-selector>
                         <vr-columns width="1/2row">
-                            <vr-switch value="scopeModel.compressPriceListFile" label="Compress PriceList File"></vr-switch>
+                            <vr-switch value="scopeModel.compressPriceListFile" label="Compressed Pricelist File"></vr-switch>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
