Add UserId for each pricelist to indicate user that created the pricelist and add created by filter for the pricelist grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42771

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePricelistManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePricelistManagement.html
@@ -17,6 +17,11 @@
                                                       normal-col-num="2"
                                                       ismultipleselection="true"
                                                       selectedvalues="selectedPricelistType"></vr-whs-be-salepricelisttype-selector>
+
+                <vr-columns width="normal">
+                    <vr-sec-user-selector on-ready="onUserSelectorReady" customlabel="Created By" ismultipleselection></vr-sec-user-selector>
+                </vr-columns>
+
             </vr-row>
         </div>
         <vr-row removeline>
