--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
@@ -12,6 +12,7 @@
     <vr-datagridcolumn headertext="'Created Time'" field="'Entity.CreatedTime'" type="'Datetime'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Currency'" field="'CurrencyName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Pricelist Type'" field="'PriceListTypeName'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Created By'" field="'UserName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Sent'" field="'Entity.IsSent'" disablesorting="true">
         <vr-icon icontype="dataItem.Entity.IsSent"></vr-icon>
     </vr-datagridcolumn>
