adding apply with children
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42780

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/AccountActionDefinition/MainExtensions/ChangeStatusAction/Templates/ChangeStatusActionSettingsTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/AccountActionDefinition/MainExtensions/ChangeStatusAction/Templates/ChangeStatusActionSettingsTemplate.html
@@ -4,4 +4,7 @@
                                          normal-col-num="4"
                                          isrequired="true">
     </vr-common-statusdefinition-selector>
+    <vr-columns width="1/2row">
+        <vr-switch value="scopeModel.applyToChildren" label="Apply to children"></vr-switch>
+    </vr-columns>
 </vr-row>
