--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
@@ -59,6 +59,11 @@
                         <vr-icon icontype="dataItem.iconType" tooltip="dataItem.iconTooltip"></vr-icon>
                     </vr-datagridcolumn>
 
+                    <span ng-if="false">
+                        <vr-datagridcolumn fixedwidth="20">
+                            <vr-icon icontype="dataItem.currencyIconType" tooltip="dataItem.currencyIconTooltip"></vr-icon>
+                        </vr-datagridcolumn>
+                    </span>
                     <vr-datagridcolumn headertext="'Route Options'" widthfactor="35" disablesorting="true">
                         <div vr-loader="dataItem.isLoadingRouteOptions">
                             <vr-whs-routing-zonerouteoptions on-ready="dataItem.onRouteOptionsReady"></vr-whs-routing-zonerouteoptions>
