Implementing new modifications for portal pages by adding extended settings
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42795

--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal_CustomerAccess/Elements/AccountStatement/Directives/Templates/AccountSatementViewEditor.html
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Web/PartnerPortal_CustomerAccess/Elements/AccountStatement/Directives/Templates/AccountSatementViewEditor.html
@@ -9,4 +9,7 @@
         <partnerportal-customeraccess-accountstatementhandler-template on-ready="scopeModel.onAccountStatementHandlerReady" isrequired="true" normal-col-num="6">
         </partnerportal-customeraccess-accountstatementhandler-template>
     </vr-row>
+   
+        <partnerportal-customeraccess-accountstatement-extendedsettings on-ready="scopeModel.onAccountStatementExtendedSettingsReady" isrequired="true" normal-col-num="6">
+        </partnerportal-customeraccess-accountstatement-extendedsettings>
 </vr-tab>
