--- a/CarrierPortal/Code/PartnerPortal.Invoice.Web/PartnerPortal_Invoice/Elements/Invoice/Views/InvoiceManagement.html
+++ b/CarrierPortal/Code/PartnerPortal.Invoice.Web/PartnerPortal_Invoice/Elements/Invoice/Views/InvoiceManagement.html
@@ -3,7 +3,9 @@
         <div ng-hide="filterSectionCollapsed" vr-loader="isLoadingFilters">
             <vr-row removeline>
                 <partnerportal-invoice-invoiceviewertype-selector on-ready="onInvoiceViewerTypeSelectorReady" isrequired="true" normal-col-num="2" onselectionchanged=" onInvoiceViewerTypeSelectorSelectionChanged"></partnerportal-invoice-invoiceviewertype-selector>
-                <vr-columns width="normal">
+                <partnerportal-invoice-selector on-ready="onInvoiceAccountsSelectorReady" normal-col-num="2" ismultipleselection></partnerportal-invoice-selector>
+
+                  <vr-columns width="normal">
                     <vr-datetimepicker type="date" label="From" value="fromDate" isrequired="true"></vr-datetimepicker>
                 </vr-columns>
                 <vr-columns width="normal">
