--- a/CarrierPortal/Code/PartnerPortal.Invoice.Web/PartnerPortal_Invoice/Elements/InvoiceViewerType/Directives/Templates/InvoiceViewerTypeSettings.html
+++ b/CarrierPortal/Code/PartnerPortal.Invoice.Web/PartnerPortal_Invoice/Elements/InvoiceViewerType/Directives/Templates/InvoiceViewerTypeSettings.html
@@ -6,6 +6,9 @@
             </vr-columns>
             <vr-common-connection-selector on-ready="scopeModel.onConnectionSelectorReady" isrequired="true" normal-col-num="6" onselectionchanged="scopeModel.onConnectionSelectionChanged"></vr-common-connection-selector>
         </vr-row>
+      
+        <partnerportal-invoice-invoiceviewertype-extendedsettings on-ready="scopeModel.onExtendedSettingsReady" isrequired="true" normal-col-num="6"></partnerportal-invoice-invoiceviewertype-extendedsettings>
+      
     </vr-tab>
     <vr-tab header="'Settings'">
         <vr-row>
