Export to Excel Handler implementation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42805

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/ChargingPolicy/Templates/ChargingPolicyGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/ChargingPolicy/Templates/ChargingPolicyGridTemplate.html
@@ -4,7 +4,7 @@
              on-ready="scopeModel.onGridReady"
              menuactions="scopeModel.menuActions"
              showexpand="scopeModel.showExpandIcon"
-             idfield="Entity.ChargingPolicyId">
+             idfield="Entity.ChargingPolicyId" enableautoexport="true">
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Service Type'" field="'ServiceTypeName'"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
