--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/CreditClass/Templates/CreditClassGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/CreditClass/Templates/CreditClassGridTemplate.html
@@ -3,7 +3,7 @@
              pagingtype="'PagingOnScroll'"
              on-ready="scopeModel.onGridReady"
              menuactions="scopeModel.menuActions"
-             idfield="Entity.CreditClassId">
+             idfield="Entity.CreditClassId" enableautoexport="true">
     <vr-datagridcolumn headertext="'Id'" field="'Entity.CreditClassId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
 </vr-datagrid>
