--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Package/Templates/PackageGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Package/Templates/PackageGridTemplate.html
@@ -1,11 +1,9 @@
-﻿
-
-<vr-datagrid on-ready="scopeModel.onGridReady"
+﻿<vr-datagrid on-ready="scopeModel.onGridReady"
              datasource="scopeModel.package"
              dataretrievalfunction="scopeModel.dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="scopeModel.menuActions"
-             idfield="Entity.PackageId">
+             idfield="Entity.PackageId" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'Id'" field="'Entity.PackageId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
