--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Product/ProductRuntime/Templates/ProductGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Product/ProductRuntime/Templates/ProductGridTemplate.html
@@ -3,7 +3,7 @@
              pagingtype="'PagingOnScroll'"
              on-ready="scopeModel.onGridReady"
              menuactions="scopeModel.menuActions"
-             idfield="Entity.ProductId">
+             idfield="Entity.ProductId" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'Id'" field="'Entity.ProductId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
