--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/ProductFamily/Templates/ProductFamilyGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/ProductFamily/Templates/ProductFamilyGridTemplate.html
@@ -3,7 +3,7 @@
              pagingtype="'PagingOnScroll'"
              on-ready="scopeModel.onGridReady"
              menuactions="scopeModel.menuActions"
-             idfield="Entity.ProductFamilyId">
+             idfield="Entity.ProductFamilyId" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'Id'" field="'Entity.ProductFamilyId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
