Account Package Recurring Charge Evaluator
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42813

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/ChargeableEntity/Templates/ChargeableEntitySettings.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/ChargeableEntity/Templates/ChargeableEntitySettings.html
@@ -1,1 +1,1 @@
-﻿
+﻿<vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onBillingTransactionTypeSelectorReady" customlabel="Transaction Type" normal-col-num="6">
