--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/BillingCycle/MainExtensions/BillingPeriod/Templates/PeriodBillingPeriodTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/BillingCycle/MainExtensions/BillingPeriod/Templates/PeriodBillingPeriodTemplate.html
@@ -1,5 +1,5 @@
 ﻿<vr-row>
     <vr-columns width="1/2row">
-        <vr-textbox value="scopeModel.numberOfDays" label="Number Of Days" isrequired></vr-textbox>
+        <vr-textbox value="scopeModel.numberOfDays" label="Number Of Days" isrequired type="number" decimalprecision="0" minvalue="0"> </vr-textbox>
     </vr-columns>
 </vr-row>
