--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/ChargeableEntity/Templates/ChargeableEntitySettings.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/ChargeableEntity/Templates/ChargeableEntitySettings.html
@@ -1,1 +1,3 @@
-﻿<vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onBillingTransactionTypeSelectorReady" customlabel="Transaction Type" normal-col-num="6">
+﻿<vr-tab header="'Settings'">
+    <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onBillingTransactionTypeSelectorReady" customlabel="Transaction Type" normal-col-num="6"></vr-accountbalance-billingtransactiontype-selector>
+</vr-tab>
