--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Views/SupplierPriceList.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Views/SupplierPriceList.html
@@ -50,6 +50,7 @@
                         <vr-button type="Save" formname="formFilter" ng-show="scopeModel.selectedSupplier != undefined" validationcontext="scopeModel.configurationValidation" data-onclick="scopeModel.saveSupplierPriceListConfiguration" haspermission="scopeModel.hassaveSupplierPriceListConfigurationPermission"></vr-button>
                         <vr-button type="Upload" validationcontext="inPutExcelGroupValid" data-onclick="scopeModel.startImport"></vr-button>
                         <vr-button type="TestConversion" validationcontext="inPutExcelGroupValid" data-onclick="scopeModel.testConversion"></vr-button>
+                        <vr-button type="Reset"  data-onclick="scopeModel.reset"></vr-button>
                     </div>
                 </vr-actionbar>
             </vr-row>
