--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RouteRule/Templates/RouteRuleViewTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RouteRule/Templates/RouteRuleViewTemplate.html
@@ -1,7 +1,7 @@
 ﻿<div>
     <vr-row removeline>
         <vr-columns width="fullrow" simplecol>
-            <vr-button type="Add" data-onclick="scopeModel.addRouteRule" standalone></vr-button>
+            <vr-button type="Add" data-onclick="scopeModel.addRouteRule" standalone haspermission="scopeModel.hasAddRulePermission"></vr-button>
         </vr-columns>
     </vr-row>
     <vr-row vr-loader="scopeModel.isGridLoading">
