--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/RatePlanPreview.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/RatePlanPreview.html
@@ -38,19 +38,7 @@
 										</vr-columns>
 									</vr-row>
 								</vr-section>
-								<vr-section title="Service Changes" level="2">
-									<vr-row>
-										<vr-columns width="fullrow">
-											<vr-label>New: </vr-label>
-											<vr-label isvalue>{{scopeModel.numberOfNewSaleZoneServices}}</vr-label>
-										</vr-columns>
-										<vr-columns width="fullrow">
-											<vr-label>Changes: </vr-label>
-											<vr-label isvalue>{{scopeModel.numberOfClosedSaleZoneServices}}</vr-label>
-										</vr-columns>
-									</vr-row>
 								</vr-section>
-							</vr-section>
 						</vr-columns>
 						<vr-columns width="1/2row">
 
@@ -70,24 +58,13 @@
 										</vr-columns>
 									</vr-row>
 								</vr-section>
-								<vr-section title="Service Changes" level="2">
-									<vr-row>
-										<vr-columns width="fullrow" ng-show="scopeModel.showSummaryServiceViewer">
-											<vr-label>New</vr-label>
-											<vr-whs-be-services-viewer on-ready="scopeModel.onSummaryServiceViewerReady"></vr-whs-be-services-viewer>
-										</vr-columns>
-										<vr-columns width="fullrow" ng-show="scopeModel.closedDefaultServiceEffectiveOn">
-											<vr-label>Closed On: </vr-label>
-											<vr-label isvalue>{{scopeModel.closedDefaultServiceEffectiveOn}}</vr-label>
-										</vr-columns>
-										<vr-columns width="fullrow" ng-show="scopeModel.showSummaryServiceViewer == null &&  scopeModel.closedDefaultServiceEffectiveOn == null">
-											<vr-label isvalue>No changes</vr-label>
-										</vr-columns>
-									</vr-row>
-								</vr-section>
 							</vr-section>
-							<vr-section title="Country Changes" ng-show="scopeModel.showCountrySummary">
-								<vr-row>
+                            <vr-section title="Country Changes" ng-show="scopeModel.showCountrySummary">
+                                <vr-row>
+                                    <vr-columns width="fullrow">
+                                        <vr-label>New: </vr-label>
+                                        <vr-label isvalue>{{scopeModel.numberOfNewCountries}}</vr-label>
+                                    </vr-columns>
 									<vr-columns width="fullrow">
 										<vr-label>Ended: </vr-label>
 										<vr-label isvalue>{{scopeModel.numberOfChangedCountries}}</vr-label>
