Bug 7025: add last imported file and import files only after this file
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42879

--- a/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/Adapter/Templates/AdapterSFTPTemplate.html
+++ b/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/Adapter/Templates/AdapterSFTPTemplate.html
@@ -25,6 +25,9 @@
         <vr-switch label="Based On Modified Time" value="basedOnTime"></vr-switch>
     </vr-columns>
     <vr-columns width="1/3row">
+        <vr-textbox value="lastImportedFile" label="Last Imported File" />
+    </vr-columns>
+    <vr-columns width="1/3row">
         <vr-select datasource="actionsAfterImport" datatextfield="name" datavaluefield="value" label="Action After Import" selectedvalues="selectedAction" isrequired ="actionIsRequired()"></vr-select>
     </vr-columns>
     <vr-columns width="1/3row">
