--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/FutureRate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/FutureRate.html
@@ -4,7 +4,8 @@
             <vr-row>
                 <vr-columns width="1/2row">
                     <vr-label>Rate: </vr-label>
-                    <vr-label isvalue="true">{{scopeModel.rate | number: 4}}{{scopeModel.isInheritedMessage}}</vr-label>
+                    <vr-label isvalue="true">{{scopeModel.rate | number: 4}}</vr-label>
+                    <vr-icon inline icontype="scopeModel.futureRateIconType" tooltip="scopeModel.futureRateIconTooltip"></vr-icon>
                 </vr-columns>
                 <vr-columns width="1/2row">
                     <vr-label>BED: </vr-label>
