Solve bug 4122 , by disable EED datepicker when the rate is closed already
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42888

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
@@ -132,7 +132,7 @@
                     <vr-datagridcolumn headertext="'EED'" fixedwidth="100" disablesorting="true">
                         <span vr-disabled="{{dataItem.IsCountryEnded}} || {{dataItem.IsZonePendingClosed}}">
                             <span vr-disabled="dataItem.isSellingProductZone">
-                                <span vr-disabled="!dataItem.IsCurrentRateEditable">
+                                <span vr-disabled="!dataItem.IsCurrentRateEditable||dataItem.currentRateEED">
                                     <vr-datetimepicker type="date"
                                                        value="dataItem.CurrentRateEED"
                                                        onvaluechanged="dataItem.onCurrentRateEEDChanged(dataItem)"
