adding system currency symbol in default rate
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42903

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/SaleAreaSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/SaleAreaSettingsTemplate.html
@@ -4,7 +4,7 @@
         <vr-tab header="'General'">
             <vr-row>
                 <vr-columns width="1/2row">
-                    <vr-label>Default Rate</vr-label>
+                    <vr-label>Default Rate ({{ctrl.systemCurrencySymbol}})</vr-label>
                     <vr-textbox value="ctrl.defaultRate" type="number" minvalue="0" decimalprecision="8" isrequired></vr-textbox>
                 </vr-columns>
                 <vr-columns width="1/2row">
