--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/RecurringCharge/ProcessInput/Templates/RecurringChargProcessTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/RecurringCharge/ProcessInput/Templates/RecurringChargProcessTemplate.html
@@ -1,5 +1,5 @@
 ﻿<vr-row removeline>
-    <vr-columns width="1/3row" >
-        <vr-datetimepicker type="date" value="effectiveDate" label="Effective Date" isrequired="true"></vr-datetimepicker>
+    <vr-columns width="1/3row">
+        <vr-datetimepicker type="date" value="effectiveDate" label="Effective Date" isrequired="true" customvalidate="validateEffectiveDate()"></vr-datetimepicker>
     </vr-columns>
 </vr-row>
