Password Complexity Finalizing
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42911

--- a/Vanrise/Code/Vanrise.Security.Web/Security/Directives/Settings/Templates/MailMessageTemplateSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Directives/Settings/Templates/MailMessageTemplateSettingsTemplate.html
@@ -1,5 +1,4 @@
-﻿
-<vr-row>
+﻿<vr-row>
     <vr-columns width="1/2row">
         <vr-common-mailmessagetemplate-selector on-ready="scopeModel.onAddUserSelectorReady"
                                                 customlabel="Add User"></vr-common-mailmessagetemplate-selector>
@@ -7,8 +6,6 @@
     <vr-columns width="1/2row">
         <vr-switch value="scopeModel.sendEmailNewUser" label="Send Email On New User"></vr-switch>
     </vr-columns>
-</vr-row>
-<vr-row>
     <vr-columns width="1/2row">
         <vr-common-mailmessagetemplate-selector on-ready="scopeModel.onResetPasswordSelectorReady"
                                                 customlabel="Reset Password"></vr-common-mailmessagetemplate-selector>
@@ -16,8 +13,6 @@
     <vr-columns width="1/2row">
         <vr-switch value="scopeModel.sendEmailResetPasswordByAdmin" label="Send Email On Reset Password by Admin"></vr-switch>
     </vr-columns>
-</vr-row>
-<vr-row>
     <vr-columns width="1/2row">
         <vr-common-mailmessagetemplate-selector on-ready="scopeModel.onForgotPasswordSelectorReady"
                                                 customlabel="Forgot Password"></vr-common-mailmessagetemplate-selector>
