--- a/Vanrise/Code/Vanrise.Security.Web/Security/Directives/Settings/Templates/SecuritySettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Directives/Settings/Templates/SecuritySettingsTemplate.html
@@ -3,5 +3,8 @@
         <vr-tab header="'Mail Message Templates'">
             <vr-sec-mailmessagetemplatesettings on-ready="scopeModel.onMailMessageTemplateSettingsReady"></vr-sec-mailmessagetemplatesettings>
         </vr-tab>
+        <vr-tab header="'Password Settings'">
+            <vr-sec-passwordsettings on-ready="scopeModel.onPasswordSettingsReady"></vr-sec-passwordsettings>
+        </vr-tab>
     </vr-tabs>
 </vr-columns>
