--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/User/ActivatePasswordEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/User/ActivatePasswordEditor.html
@@ -11,7 +11,7 @@
                     </vr-row>
                     <vr-row>
                         <vr-columns width="1/2row">
-                            <vr-textbox label="New Password" type="password" value="password" isrequired="true"></vr-textbox>
+                            <vr-textbox label="New Password" type="password" value="password" isrequired="true" hint="{{passwordHint}}" largehint></vr-textbox>
                         </vr-columns>
                         <vr-columns width="1/2row">
                             <vr-textbox label="Confirm Password" type="password" value="confirmedPassword" isrequired="true"></vr-textbox>
