--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/User/ChangePassword.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/User/ChangePassword.html
@@ -3,19 +3,22 @@
         <vr-form name="formChangePassword">
             <vr-row>
                 <vr-columns width="1/2row">
-                    <vr-textbox value="oldPassword" label="Current Password" type="password" isrequired></vr-textbox>
+                    <vr-textbox value="oldPassword" label="Current Password" type="password" isrequired="true"></vr-textbox>
                 </vr-columns>
             </vr-row>
             <vr-validation-group validationcontext="SaveGroup">
                 <vr-validator validate="validatePasswords()">
                     <vr-row>
                         <vr-columns width="1/2row">
-                            <vr-textbox label="New Password" type="password" value="newPassword" isrequired></vr-textbox>
+                            <vr-textbox label="New Password" type="password" value="newPassword" isrequired="true" ></vr-textbox>
+                        </vr-columns>
+                        <vr-columns colnum="1" withemptyline>
+                            <vr-hint value="{{passwordHint}}" largehint></vr-hint>
                         </vr-columns>
                     </vr-row>
                     <vr-row>
                         <vr-columns width="1/2row">
-                            <vr-textbox label="Confirm Password" type="password" value="confirmedPassword" isrequired></vr-textbox>
+                            <vr-textbox label="Confirm Password" type="password" value="confirmedPassword" isrequired="true"></vr-textbox>
                         </vr-columns>
                     </vr-row>
                 </vr-validator>
