implementing selling product currency
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42933

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SellingProduct/Templates/SellingProductGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SellingProduct/Templates/SellingProductGridTemplate.html
@@ -7,6 +7,7 @@
              idfield="Entity.SellingProductId" enableautoexport="true">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.SellingProductId'" widthfactor="2"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Currency'" field="'SellingProductCurrencyName'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Selling Number Plan'" field="'SellingNumberPlanName'"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
