--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/BillingTransaction/Templates/BillingTransactionSearch.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/BillingTransaction/Templates/BillingTransactionSearch.html
@@ -8,7 +8,7 @@
         <vr-button type="Search" standalone data-onclick="scopeModel.searchClicked" vr-disabled="scopeModel.fromTime==undefined || scopeModel.fromTime== null ||  scopeModel.validateDateTime()!=null"></vr-button>
         <vr-button type="Add" standalone data-onclick="scopeModel.addTransaction" ng-show="scopeModel.hasAddTransaction"></vr-button>
     </vr-columns>
-    <vr-columns colnum="3" withemptyline>
+    <vr-columns colnum="3" >
         <div class="pull-right">
             <vr-label isvalue>Current Balance:</vr-label>
             <vr-label>{{scopeModel.balance |  vrtextOrNumber : 2}}</vr-label>
