--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/GenericLKUP/Templates/GenericLKUPItemGrid.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/GenericLKUP/Templates/GenericLKUPItemGrid.html
@@ -7,4 +7,7 @@
     <vr-datagridcolumn headertext="'Id'" field="'Entity.GenericLKUPItemId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Generic LKUP'" field="'BusinessEntityDefinitionName'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
