--- a/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Views/BillingReport/BillingReport.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Views/BillingReport/BillingReport.html
@@ -22,7 +22,11 @@
                 </span>
 
                 <vr-common-currency-selector on-ready="onCurrencySelectReady" isrequired="true" selectedvalues="selectedCurrency" normal-col-num="2"></vr-common-currency-selector>
-
+                <vr-columns colnum="2" ng-show="reporttype.ParameterSettings.RequiresIsCost">
+                    <!--<vr-label>Cost</vr-label>-->
+                    <vr-whs-analytics-billingreporttype-selector on-ready="onBillingReportTypeSelectReady" onselectionchanged="onTypeSelectionChanged" selectedvalues="selectedType"></vr-whs-analytics-billingreporttype-selector>
+                    <!-- <vr-switch value="params.isCost" onvaluechanged="resetGroupBySupplier"></vr-switch>-->
+                </vr-columns>
                 <vr-columns colnum="2" ng-if="false">
                     <button ng-if="false" ng-click="export()" class="btn btn-default">Export</button>
                 </vr-columns>
@@ -36,12 +40,6 @@
                     <vr-label>Group By Profile</vr-label>
                     <vr-switch value="params.groupByProfile"></vr-switch>
                 </vr-columns>
-
-                <vr-columns colnum="2" ng-if="reporttype.ParameterSettings.RequiresIsCost">
-                    <vr-label>Cost</vr-label>
-                    <vr-switch value="params.isCost" onvaluechanged="resetGroupBySupplier"></vr-switch>
-                </vr-columns>
-
                 <!--<vr-columns colnum="2" ng-if="reporttype.ParameterSettings.RequiresIsService">
                     <vr-label>Services</vr-label>
                     <vr-switch value="params.service"></vr-switch>
