account package recurring charge
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42992

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Package/PackageDefinition/MainExtensions/ExtendedSettings/MainExtensions/Templates/PeriodicEvaluatorTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Package/PackageDefinition/MainExtensions/ExtendedSettings/MainExtensions/Templates/PeriodicEvaluatorTemplate.html
@@ -13,5 +13,7 @@
                                             customlabel="Chargeable Item">
         </vr-common-genericlkupitem-selector>
     </span>
-
+</vr-row>
+<vr-row>
+    <vr-common-statusdefinition-selector on-ready="scopeModel.onStatusDefinitionSelectorReady" normal-col-num="6" customlabel="Pricing Status" isrequired="true" ismultipleselection="true"></vr-common-statusdefinition-selector>
 </vr-row>
