--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SupplierPricelist/Templates/SupplierPricelistGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SupplierPricelist/Templates/SupplierPricelistGridTemplate.html
@@ -9,6 +9,6 @@
     <vr-datagridcolumn headertext="'Supplier'" field="'SupplierName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Created Time'" field="'Entity.CreateTime'" type="'Datetime'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Currency'" field="'Currency'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'ProcessInstanceId'" field="'Entity.ProcessInstanceId'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'StateBackupId'" field="'Entity.SPLStateBackupId'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Created By'" field="'UserName'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Checkpoint ID'" field="'Entity.SPLStateBackupId'" type="'Text'"></vr-datagridcolumn>
 </vr-datagrid>
