--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SupplierPricelist/SupplierPricelist.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SupplierPricelist/SupplierPricelist.html
@@ -2,15 +2,21 @@
     <vr-form name="formFilter">
         <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
-                 
-                    <vr-whs-be-carrieraccount-selector getsuppliers on-ready="onSupplierReady" normal-col-num="2" isrequired="false" ismultipleselection></vr-whs-be-carrieraccount-selector>
-               
+
+                <vr-whs-be-carrieraccount-selector getsuppliers on-ready="onSupplierReady" normal-col-num="2" isrequired="false" ismultipleselection></vr-whs-be-carrieraccount-selector>
+
                 <vr-columns width="normal">
                     <vr-datetimepicker type="dateTime" label="From" value="fromDate" isrequired customvalidate="validateDateTime()"></vr-datetimepicker>
                 </vr-columns>
+
                 <vr-columns width="normal">
                     <vr-datetimepicker type="dateTime" label="To" value="toDate" customvalidate="validateDateTime()"></vr-datetimepicker>
                 </vr-columns>
+
+                <vr-columns width="normal">
+                    <vr-sec-user-selector on-ready="onUserSelectorReady" customlabel="Created By" ismultipleselection></vr-sec-user-selector>
+                </vr-columns>
+
             </vr-row>
         </div>
         <vr-row removeline>
