--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/FinancialAccount/MainExtensions/Netting/Templates/NettingSettings.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/FinancialAccount/MainExtensions/Netting/Templates/NettingSettings.html
@@ -1,6 +1,6 @@
 ﻿<vr-row>
     <vr-columns width="1/2row">
-        <vr-textbox value="scopeModel.customerCreditLimit" isrequired="true" type="number" label="Customer Credit Limit"></vr-textbox>
+        <vr-textbox value="scopeModel.customerCreditLimit" isrequired="true" type="number" minvalue="0" label="Customer Credit Limit"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/2row">
         <br />
@@ -9,7 +9,7 @@
 </vr-row>
 <vr-row>
     <vr-columns width="1/2row">
-        <vr-textbox value="scopeModel.supplierCreditLimit" isrequired="true" type="number" label="Supplier Credit Limit"></vr-textbox>
+        <vr-textbox value="scopeModel.supplierCreditLimit" isrequired="true" type="number" minvalue="0" label="Supplier Credit Limit"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/2row">
         <br />
