--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/FinancialAccount/MainExtensions/SupplierPostpaid/Templates/SupplierPostpaidSettings.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/FinancialAccount/MainExtensions/SupplierPostpaid/Templates/SupplierPostpaidSettings.html
@@ -1,6 +1,6 @@
 ﻿<vr-row>
     <vr-columns width="1/2row">
-        <vr-textbox value="scopeModel.creditLimit" isrequired="true" type="number" label="Credit Limit"></vr-textbox>
+        <vr-textbox value="scopeModel.creditLimit" isrequired="true" type="number" minvalue="0" label="Credit Limit"></vr-textbox>
     </vr-columns>
     <vr-columns width="1/2row">
         <br />
